--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/router": "^10.1.0",
     "@nrwl/angular": "10.3.0",
     "jwt-decode": "^2.2.0",
+    "material-design-icons": "^3.0.1",
     "ngx-logger": "^4.1.9",
     "rxjs": "~6.5.5",
     "rxjs-compat": "^6.6.3",
