--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "carbon-components": "^10.32.1",
     "carbon-components-angular": "^4.48.1",
     "rxjs": "~6.6.3",
+    "ts-localstorage": "^1.1.0",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
   },
