--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -33,5 +33,5 @@ jobs:
           git config --local user.email "i.love.to.smile.around@gmail.com"
           git config --local user.name "GitHub Action"
           git add .
-          # git commit -m "[GH Action] Auto publish to Github Page" -a
+          git commit -m "[GH Action] Auto publish to Github Page" -a
           git diff --quiet && git diff --staged --quiet || (git commit -m "[GH Action] Auto publish to Github Page"; git push origin main)
