--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
     "start": "ng serve",
+    "build:prod": "ng build:prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
@@ -41,6 +42,7 @@
     "@nrwl/angular": "12.0.1",
     "carbon-components": "^10.32.1",
     "carbon-components-angular": "^4.48.1",
+    "crypto-js": "^4.0.0",
     "rxjs": "~6.6.3",
     "ts-localstorage": "^1.1.0",
     "tslib": "^2.0.0",
