--- a/apps/mixcore-portal/tsconfig.json
+++ b/apps/mixcore-portal/tsconfig.json
@@ -12,5 +12,10 @@
     {
       "path": "./tsconfig.editor.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "paths": {
+      "@mix-lib":["../../../mix.lib.ts/src"]
+    }
+  }
 }
