--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
     "@carbon/icons": "^10.29.0",
+    "@nodelib/fs.stat": "^2.0.4",
     "@nrwl/angular": "12.0.1",
     "carbon-components": "^10.32.1",
     "carbon-components-angular": "^4.48.1",
