--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -35,7 +35,7 @@ jobs:
         # git clone https://github.com/mixcore/mix.lib.ts.git ${HOME}/work/${GITHUB_REPOSITORY}/
         git clone https://github.com/mixcore/mix.lib.ts.git ${HOME}/work/mix.lib.ts
         
-        git checkout main
+        git checkout master
         
         cd ${HOME}/work/mix.lib.ts
         npm i
@@ -51,4 +51,4 @@ jobs:
         git add .
         
         # Only commit and push if we have changes
-        git diff --quiet && git diff --staged --quiet || (git commit -m "${COMMIT_MSG}"; git push origin main)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "${COMMIT_MSG}"; git push origin master)
