--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "@nrwl/linter": "12.0.1",
     "@nrwl/tao": "12.0.1",
     "@nrwl/workspace": "12.0.1",
-    "@types/jest": "26.0.8",
+    "@thunder-tools/prettier-plugin-formatter": "^1.1.1",
+    "@types/jest": "^26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
@@ -73,8 +74,8 @@
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.2",
+    "jest": "^26.2.2",
+    "jest-preset-angular": "^8.3.2",
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
