--- a/apps/mixcore-portal/.eslintrc.json
+++ b/apps/mixcore-portal/.eslintrc.json
@@ -10,6 +10,7 @@
       ],
       "parserOptions": { "project": ["apps/mixcore-portal/tsconfig.*?.json"] },
       "rules": {
+        "@typescript-eslint/no-inferrable-types": "off",
       }
     },
     {
