--- a/package.json
+++ b/package.json
@@ -31,18 +31,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.0",
+    "@angular/cdk": "^11.2.12",
     "@angular/common": "^11.2.0",
     "@angular/compiler": "^11.2.0",
     "@angular/core": "^11.2.0",
     "@angular/forms": "^11.2.0",
+    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
-    "@carbon/icons": "^10.29.0",
     "@nodelib/fs.stat": "^2.0.4",
     "@nrwl/angular": "12.0.1",
-    "carbon-components": "^10.32.1",
-    "carbon-components-angular": "^4.48.1",
     "crypto-js": "^4.0.0",
     "rxjs": "~6.6.3",
     "ts-localstorage": "^1.1.0",
