--- a/apps/mix-portal/.eslintrc.json
+++ b/apps/mix-portal/.eslintrc.json
@@ -4,10 +4,7 @@
   "overrides": [
     {
       "files": ["*.ts"],
-      "extends": [
-        "plugin:@nrwl/nx/angular",
-        "plugin:@angular-eslint/template/process-inline-templates"
-      ],
+      "extends": ["plugin:@nrwl/nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
@@ -21,7 +18,6 @@
           "error",
           {
             "type": "element",
-            "prefix": "mix-portal",
             "style": "kebab-case"
           }
         ]
