--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
+    "preinstall": "node ./scripts/preinstall.js",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
     "start": "ng serve",
@@ -30,27 +31,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.0",
-    "@angular/common": "^12.0.0",
-    "@angular/compiler": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "@angular/forms": "^12.0.0",
-    "@angular/platform-browser": "^12.0.0",
-    "@angular/platform-browser-dynamic": "^12.0.0",
-    "@angular/router": "^12.0.0",
+    "@angular/animations": "11.2.13",
+    "@angular/common": "11.2.13",
+    "@angular/compiler": "11.2.13",
+    "@angular/core": "11.2.13",
+    "@angular/forms": "11.2.13",
+    "@angular/platform-browser": "11.2.13",
+    "@angular/platform-browser-dynamic": "11.2.13",
+    "@angular/router": "11.2.13",
+    "@coreng/angular-core": "^0.0.1",
+    "@ngrx/component-store": "11.1.1",
     "@nrwl/angular": "12.4.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "lodash-es": "4.17.4",
+    "ng-zorro-antd": "^11.4.2",
+    "rxjs": "6.6.0",
+    "tslib": "2.0.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.0",
-    "@angular-eslint/eslint-plugin": "~12.0.0",
-    "@angular-eslint/eslint-plugin-template": "~12.0.0",
-    "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "^12.0.0",
-    "@angular/compiler-cli": "^12.0.0",
-    "@angular/language-service": "^12.0.0",
+    "@angular-devkit/build-angular": "0.1102.13",
+    "@angular-eslint/eslint-plugin": "4.3.0",
+    "@angular-eslint/eslint-plugin-template": "4.3.0",
+    "@angular-eslint/template-parser": "4.3.0",
+    "@angular/cli": "11.2.13",
+    "@angular/compiler-cli": "11.2.13",
+    "@angular/language-service": "11.2.13",
+    "@eztool/prettier-plugin-formatter": "1.0.1",
     "@nrwl/cli": "12.4.0",
     "@nrwl/cypress": "12.4.0",
     "@nrwl/eslint-plugin-nx": "12.4.0",
@@ -61,21 +67,23 @@
     "@nrwl/workspace": "12.4.0",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@typescript-eslint/eslint-plugin": "4.24.0",
+    "@typescript-eslint/parser": "4.24.0",
     "commitizen": "4.2.4",
-    "cz-customizable": "6.3.0",
     "cypress": "^7.3.0",
+    "cz-customizable": "6.3.0",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-cypress": "2.11.3",
+    "husky": "6.0.0",
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.3",
     "prettier": "2.2.1",
-    "ts-jest": "27.0.3",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.2.4"
+    "pretty-quick": "3.1.0",
+    "ts-jest": "26.5.6",
+    "ts-node": "9.1.1",
+    "typescript": "4.1.5"
   },
   "config": {
     "commitizen": {
@@ -100,5 +108,8 @@
       "node ./scripts/html-formatter.js --staged",
       "git add -f"
     ]
-  }
+  },
+  "workspaces": [
+    "tools/eslint"
+  ]
 }
