--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@mix-portal/ng/cms-dashboard": ["libs/ng/cms-dashboard/src/index.ts"],
+      "@mix-portal/ng/cms-init": ["libs/ng/cms-init/src/index.ts"],
+      "@mix-portal/ng/cms-portal": ["libs/ng/cms-portal/src/index.ts"],
+      "@mix-portal/ng/webshell": ["libs/ng/webshell/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
