--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "@angular/platform-browser-dynamic": "11.2.13",
     "@angular/router": "11.2.13",
     "@coreng/angular-core": "^0.0.1",
-    "@ngrx/component-store": "11.1.1",
+    "@ngneat/transloco": "^2.22.0",
+    "@ngrx/component-store": "^12.2.0",
     "@nrwl/angular": "12.4.0",
     "lodash-es": "4.17.4",
     "ng-zorro-antd": "^11.4.2",
