--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
     "start": "ng serve",
-    "build": "ng build",
+    "build:mix-portal": "nx run mix-portal:build:production",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
+    "build:all": "nx run-many --target build --all --parallel --with-deps --prod",
+    "test:all": "nx run-many --target test --all --parallel --code-coverage",
+    "lint:all": "nx run-many --target lint --all --parallel",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
