--- a/libs/ng/cms-portal/.eslintrc.json
+++ b/libs/ng/cms-portal/.eslintrc.json
@@ -4,32 +4,13 @@
   "overrides": [
     {
       "files": ["*.ts"],
-      "extends": [
-        "plugin:@nrwl/nx/angular",
-        "plugin:@angular-eslint/template/process-inline-templates"
-      ],
+      "extends": ["plugin:@eztool/recommended-strict-angular", "plugin:@angular-eslint/template/process-inline-templates"],
+      "parserOptions": { "project": ["libs/ng/cms-portal/tsconfig.*?.json"] },
       "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "mixPortal",
-            "style": "camelCase"
-          }
-        ],
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "style": "kebab-case"
-          }
-        ]
+        "@angular-eslint/directive-selector": ["error", { "type": "attribute", "style": "camelCase" }],
+        "@angular-eslint/component-selector": ["error", { "type": "element", "style": "kebab-case" }]
       }
     },
-    {
-      "files": ["*.html"],
-      "extends": ["plugin:@nrwl/nx/angular-template"],
-      "rules": {}
-    }
+    { "files": ["*.html"], "extends": ["plugin:@eztool/recommended-strict-angular-template"], "rules": {} }
   ]
 }
