--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,12 +14,10 @@ jobs:
     name: Pull request validation
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository and sub-modules
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
-          submodules: recursive
+          ref: ${{ github.event.pull_request.head.ref }}
           fetch-depth: 0
-          token: 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
 
       - name: Setup node
         uses: actions/setup-node@v2
@@ -44,9 +42,6 @@ jobs:
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install
 
-      - name: Validate git branch
-        run: node ./scripts/git-branch-lint.js "${{ github.head_ref }}"
-
       - name: Validate pull request title
         run: node ./scripts/git-commit-lint.js "${{ github.event.pull_request.title }}"
 
@@ -54,7 +49,7 @@ jobs:
         run: yarn affected:lint --base=origin/master --head=HEAD
 
       - name: Build affected single-spa projects
-        run: yarn affected:build:single-spa --prod --base=origin/master --head=HEAD
+        run: yarn affected:build --prod --base=origin/master --head=HEAD
 
       - name: Test affected projects
         run: yarn affected:test --base=origin/master --head=HEAD
