--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mix-portal",
+  "name": "mix.portal.angular",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -66,7 +66,7 @@
     "@nrwl/eslint-plugin-nx": "12.4.0",
     "@nrwl/jest": "12.4.0",
     "@nrwl/linter": "12.4.0",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^12.2.7",
     "@nrwl/tao": "12.4.0",
     "@nrwl/workspace": "12.4.0",
     "@types/jest": "26.0.8",
