--- a/libs/ng/webshell/tsconfig.spec.json
+++ b/libs/ng/webshell/tsconfig.spec.json
@@ -5,6 +5,6 @@
     "module": "commonjs",
     "types": ["jest", "node"]
   },
-  "files": ["test/test-setup.ts"],
+  "files": [],
   "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
