--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@mix-portal/ng/cms-dashboard": ["libs/ng/cms-dashboard/src/index.ts"],
       "@mix-portal/ng/cms-init": ["libs/ng/cms-init/src/index.ts"],
       "@mix-portal/ng/cms-module": ["libs/ng/cms-module/src/index.ts"],
+      "@mix-portal/ng/cms-navigation": ["libs/ng/cms-navigation/src/index.ts"],
       "@mix-portal/ng/cms-page": ["libs/ng/cms-page/src/index.ts"],
       "@mix-portal/ng/cms-portal": ["libs/ng/cms-portal/src/index.ts"],
       "@mix-portal/ng/cms-post": ["libs/ng/cms-post/src/index.ts"],
