--- a/nx.json
+++ b/nx.json
@@ -34,6 +34,9 @@
     "ng-cms-module": {
       "tags": []
     },
+    "ng-cms-navigation": {
+      "tags": []
+    },
     "ng-cms-page": {
       "tags": []
     },
